infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1 #how many pods to run
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels: 
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: oliverafajardo/event-bus
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 4005
      targetPort: 4005

# ClusterIP is a type of service that exposes the service on a private IP address inside the cluster
#eveng bus is listening on port 4005, so we will map that port to the service
