infra/k8s/posts-depl.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1 #how many pods to run
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels: 
        app: posts
    spec:
      containers:
        - name: posts
          image: oliverafajardo/posts
--- ##means end of confif block and start a new one  
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
  type: ClusterIP
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000



# explaining this deployment 
# 1. we are creating a deployment for the posts service
# 2. we are specifying the number of replicas to run
# 3. we are specifying the selector to match the labels of the pods
# 4. we are specifying the template to run the pods
# 5. we are specifying the labels to match the selector
# 6. we are specifying the image to run the pods
