infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec: #how the service behaves
  type: NodePort #how the service is exposed to the outside world
  selector: #how the service is matched to the pods
    app: posts
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
