infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  #selector is used to select the pods to be managed by the deployment
  selector:
    matchLabels:
      app: tickets
  #how to create each individual pod
  template:
    metadata:
      labels: 
        app: tickets
    spec:
      containers:
        - name: tickets 
          image: us.gcr.io/ticketing-dev-463223/tickets
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 3000

---
#service for the tickets deployment
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec: 
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
